# my-python-template

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
my_python_template/: calculator.py
src/: __init__.py  main.py
src/example_package/: __init__.py  example_module.py
tests/: test_calculator.py
tests/test_example_package/: test__init__.py  test_example_module.py
