[project]
name =  "my-python-template"
authors = [
    {name = "Alexander Carrels"},
]

description = "Sample Python Project for creating a new Python Module"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8.1"

[project.optional-dependencies]
test = [
    "bandit[toml]==1.7.5", # find common security issues in Python code
    "black==23.3.0",
    "check-manifest==0.49",
    "flake8-bugbear==23.5.9",
    "flake8-docstrings",
    "flake8-formatter_junit_xml",
    "flake8",
    "flake8-pyproject",
    "pre-commit==3.3.1",
    "pylint==2.17.4",
    "pylint_junit",
    "pytest-cov==4.0.0",
    "pytest-mock<3.10.1",
    "pytest-runner",
    "pytest==7.3.1",
    "pytest-github-actions-annotate-failures",
    "mypy"]

[tool.black]
line-length = 120
fast = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100

[tool.flake8]
max-line-length = 120
select = "F,E,W,B,B901,B902,B903"
exclude = [".venv"]